# action-pack

./: .gitignore  README.md  package-lock.json  package.json
electron/: actionExecutor.js  hotkeyManager.js  main.js  modelBridge.js  preload.js  screenCapture.js
python/: model.py  pyproject.toml  schema.py  server.py
renderer/: index.html  overlay.js  styles.css
scripts/: dev.sh
